# Tatsuyo

./: README.md  main.py  pyproject.toml
commands/: AboutMe.py  anime.py  nhentai.py
core/apis/: anilist.py
core/extras/: embeds.py  graphql.py  utils.py  views.py
examples/: userdata.xml
extras/: embeds.py  views.py
