[tool.poetry]
name = "tatsuyo"
version = "0.1.0"
description = "A discord bot purely for anime watchers and enthusiast."
authors = ["ResetXD <resetwastakenwastaken@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
disnake = "^2.5.2"
hentai = {git = "https://github.com/ResetXD/hentai"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
